--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,27 @@
 # --- Web scraping y automatización ---
-selenium
-webdriver-manager
-playwright
-beautifulsoup4
+selenium>=4.0.0
+webdriver-manager>=3.8.0
+playwright>=1.40.0
+beautifulsoup4>=4.12.0
 # --- Data science y predicción ---
-pandas
-numpy
-prophet
+pandas>=2.0.0
+numpy>=1.24.0
 # --- HTTP y APIs ---
-requests
-python-dotenv
+requests>=2.31.0
+python-dotenv>=1.0.0
 # --- Supabase ---
-supabase
+supabase>=2.0.0
 # --- Utilidades ---
-python-jose
-PyJWT
+python-jose>=3.3.0
+PyJWT>=2.8.0
 # --- Logging y retry ---
-tenacity
+tenacity>=8.2.0
 # --- Geolocalización ---
-geopy
+geopy>=2.3.0
 # --- Otros (CLI, typing, etc) ---
-typing-extensions
-# --- Flask backend (si usas backend_server.py) ---
-Flask
-flask-cors
-# --- Para compatibilidad con async supabase ---
-supabase-py[async]
-# --- Para compatibilidad con async playwright ---
-playwright-async-api 
+typing-extensions>=4.7.0
+# --- Flask backend ---
+Flask>=3.0.0
+flask-cors>=4.0.0
+# --- Scheduler ---
 APScheduler>=3.10.0 
